# Ecclesia

./: __init__.py  _settings.py  actors.py  pyproject.toml
ecclesia/abc/: actors.py
ecclesia/abc/election/: __init__.py  attribution.py  voting.py
ecclesia/election/: __init__.py  attribution.py  ballots.py  voting.py
election/: __init__.py  attribution.py  results_format.py  voting.py
game/: country_templates.rpy  election.rpy
old/ecclesia/: _settings.py  actors.py
old/ecclesia/election/: results_format.py
src/ecclesia/: __init__.py  actors.py
src/ecclesia/election/: __init__.py  attribution.py  results_format.py  voting.py
